sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: not found: value i
def bubbleSort()  {i=true
                   ^AlgBubbleSort1:3: error: not found: value i
  while (i==true)
         ^AlgBubbleSort1:4: error: not found: value i
  {i=false; for (i<- 0 to (getNombreValeurs()-2)){
   ^AlgBubbleSort1:6: error: reassignment to val
        {echange(i,i+1);i=true}}
                         ^