sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {i=true
  while (i==true)
  {i=false; for (i<- 0 to (getNombreValeurs()-2)){
    	{if (plusPetit(i,i+1))
      	{echange(i,i+1);i=true}}
  						
}
  }}